Slides for loops

--- a/epam/Presentation/08-bash_syntax.tex
+++ b/epam/Presentation/08-bash_syntax.tex
@@ -99,9 +99,9 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Тесты и сравнения}
+%\section{Тесты и сравнения}
 
-\mode<all>{\input{../../slides/bash/tests}}
+%\mode<all>{\input{../../slides/bash/tests}}
 
 \section{Операторы}
 
@@ -119,9 +119,9 @@
 
 \mode<all>{\input{../../slides/bash/loops}}
 
-\section{Массивы}
+%\section{Массивы}
 
-\mode<all>{\input{../../slides/bash/arrays}}
+%\mode<all>{\input{../../slides/bash/arrays}}
 
 \section{Функции}
 
