--- a/slides/bash/tests.tex
+++ b/slides/bash/tests.tex
@@ -61,6 +61,40 @@ echo $a $b
 
 \end{frame}
 
+\begin{frame}[fragile]
+	\frametitle{Пример}
+
+	Написать скрипт сравнивающий переменную окружения с заранее заданным значением:
+	
+	\small\begin{lstlisting}
+#!/bin/bash
+
+VAR=$1
+STRING=test
+[ $STRING == $VAR ] && echo "Строки одинаковы" || echo "Строки разные"
+exit
+	\end{lstlisting}
+    \normalsize
+	И запустить этот скрипт:
+	
+	\begin{enumerate}
+		\item {\tt sh script.sh string}
+		\item {\tt sh script.sh test}
+		\item {\tt sh script.sh}
+	\end{enumerate}
+
+\end{frame}
+
+\begin{frame}
+	\frametitle{Пример: варианты исправления}
+
+		\begin{enumerate}
+			\item {\tt [ ``\$STRING'' == ``\$VAR'' ] }
+			\item {\tt [ z\$STRING == z\$VAR ] }
+		\end{enumerate}
+
+\end{frame}
+
 \begin{frame}[fragile]{\&\& и ||}
 	Синтаксис:
 \begin{verbatim}
