--- a/epam/Presentation/08-bash_syntax.tex
+++ b/epam/Presentation/08-bash_syntax.tex
@@ -103,28 +103,28 @@
 
 %\mode<all>{\input{../../slides/bash/tests}}
 
-\section{Операторы}
+%\section{Операторы}
 
-\mode<all>{\input{../../slides/bash/operators}}
+%\mode<all>{\input{../../slides/bash/operators}}
 
 \section{Арифметические операции}
 
 \mode<all>{\input{../../slides/bash/arithmetic}}
 
-\section{Ветвления}
-
-\mode<all>{\input{../../slides/bash/branching}}
-
 \section{Циклы}
 
 \mode<all>{\input{../../slides/bash/loops}}
+
+\section{Ветвления}
+
+\mode<all>{\input{../../slides/bash/branching}}
 
 %\section{Массивы}
 
 %\mode<all>{\input{../../slides/bash/arrays}}
 
-\section{Функции}
+%\section{Функции}
 
-\mode<all>{\input{../../slides/bash/functions}}
+%\mode<all>{\input{../../slides/bash/functions}}
 
 \end{document}
