--- a/epam/Presentation/08-bash_syntax.tex
+++ b/epam/Presentation/08-bash_syntax.tex
@@ -99,10 +99,9 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\section{Тесты и сравнения}
+\section{Тесты и сравнения}
 
-%\mode<all>{\input{../../slides/bash/tests}}
-
+\mode<all>{\input{../../slides/bash/tests}}
 %\section{Операторы}
 
 %\mode<all>{\input{../../slides/bash/operators}}
@@ -115,9 +114,10 @@
 
 \mode<all>{\input{../../slides/bash/loops}}
 
-\section{Ветвления}
+\section{Условные операторы}
 
 \mode<all>{\input{../../slides/bash/branching}}
+
 
 %\section{Массивы}
 
