--- a/epam/Presentation/08-bash_syntax.tex
+++ b/epam/Presentation/08-bash_syntax.tex
@@ -119,9 +119,9 @@
 \mode<all>{\input{../../slides/bash/branching}}
 
 
-%\section{Массивы}
+\section{Массивы}
 
-%\mode<all>{\input{../../slides/bash/arrays}}
+\mode<all>{\input{../../slides/bash/arrays}}
 
 %\section{Функции}
 
