slides for case and select shell syntax

--- a/epam/Presentation/09-bash_syntax.tex
+++ b/epam/Presentation/09-bash_syntax.tex
@@ -99,23 +99,13 @@
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Тесты и сравнения}
+\section{Условные операторы}
 
-\mode<all>{\input{../../slides/bash/tests}}
-%\section{Операторы}
+\mode<all>{\input{../../slides/bash/branching}}
 
-%\mode<all>{\input{../../slides/bash/operators}}
 
-\section{Арифметические операции}
+\section{Функции}
 
-\mode<all>{\input{../../slides/bash/arithmetic}}
-
-\section{Циклы}
-
-\mode<all>{\input{../../slides/bash/loops}}
-
-%\section{Функции}
-
-%\mode<all>{\input{../../slides/bash/functions}}
+\mode<all>{\input{../../slides/bash/functions}}
 
 \end{document}
