Added local variables slide

--- a/slides/bash/functions.tex
+++ b/slides/bash/functions.tex
@@ -83,13 +83,33 @@ exit
 
 \end{frame}
 
-\begin{frame}
-	\frametitle{}
-	\begin{itemize}
-		\item 
-		\item 
-		\item
-  \end{itemize}
+\begin{frame}[fragile]
+	\frametitle{локальные переменные}
+
+	Переменные объявленные с префиксом {\tt local} видны только внутри объявленного блока.
+
+	\small
+	\begin{lstlisting}
+#!/bin/bash
+
+VAR=test
+f1(){
+	local VAR=f1
+	echo $0: VAR1=$VAR
+}
+f2(){
+    VAR=f2
+    echo $0: VAR=$VAR
+}
+
+echo Before f1: VAR=$VAR
+f1
+echo Before f2: VAR=$VAR
+f2
+echo After f2: VAR=$VAR
+
+exit
+		\end{lstlisting}
 \end{frame}
 
 \begin{frame}
