[SS] cosmetic formatting

--- a/sam-solutions/08_Debugging.tex
+++ b/sam-solutions/08_Debugging.tex
@@ -19,6 +19,7 @@
       \item максимальный размер core dump (core file)
     \end{itemize}
   \end{block} 
+\small
   Примечание: для обычного пользователя работают только в сторону ужесточения, без возможности отката.
   \pause
 
