--- a/slides/bash/functions.tex
+++ b/slides/bash/functions.tex
@@ -89,7 +89,9 @@ exit
 	Переменные объявленные с префиксом {\tt local} видны только внутри объявленного блока.
 
 	\small
-	\begin{lstlisting}
+	\begin{columns}
+		\column{0.5\textwidth}
+		\begin{lstlisting}
 #!/bin/bash
 
 VAR=test
@@ -101,6 +103,9 @@ f2(){
     VAR=f2
     echo $0: VAR=$VAR
 }
+		\end{lstlisting}
+		\column{0.5\textwidth}	
+		\begin{lstlisting}
 
 echo Before f1: VAR=$VAR
 f1
@@ -110,34 +115,26 @@ echo After f2: VAR=$VAR
 
 exit
 		\end{lstlisting}
+	\end{columns}
+
 \end{frame}
 
 \begin{frame}
-	\frametitle{}
+	\frametitle{Практическое задание}
 	\begin{itemize}
-		\item 
-		\item 
-		\item
+		\item Создать библиотеку функций:
+			\begin{itemize}
+				\item функция {\tt help};
+				\item функция {\tt count\_str} -- подсчитывает количество найденных строк в stdin.
+				\item функция {\tt readfile}, в которую передается имя файла в качестве 1 параметра
+					и строка, которую необходимо найти, в качестве 2-го.
+					Задача функции -- вырезать из файла все пустые строки и комментарии, 
+					и с помощью предыдущей функции вернуть количество вхождений искомой строки.
+			\end{itemize}
+		\item Создать скрипт, который обрабатывает файл переданный через параметр -f или -{}-file;
+		\item Включить библиотеку в свой скрипт с помощью {\tt source};
+		\item Найти количество сервисов {\tt tcp} в файле {\tt /etc/services};
+		\item Найти количество сервисов {\tt udp} в файле {\tt /etc/services};
   \end{itemize}
 \end{frame}
-
-\begin{frame}
-	\frametitle{}
-	\begin{itemize}
-		\item 
-		\item 
-		\item
-  \end{itemize}
-\end{frame}
-
-\begin{frame}
-	\frametitle{}
-	\begin{itemize}
-		\item 
-		\item 
-		\item
-  \end{itemize}
-\end{frame}
-
-
 
