split into parts

--- a/conferences/lvee2013-winter/corporate_linux_education.tex
+++ b/conferences/lvee2013-winter/corporate_linux_education.tex
@@ -6,6 +6,10 @@
 
 \institute[EPAM, SaM Solutions]
 {
+  \includegraphics[height=1.8cm]{sam-solutions}
+  \includegraphics[height=1.8cm]{mlug}
+  \includegraphics[height=1.2cm]{epam}
+
   EPAM Systems, Embedded Solutions Department\\
   SaM Solutions, Linux \& Embedded Department \\
   Minsk Linux Users Group
@@ -20,5 +24,17 @@
 \begin{document}
 
 \firstframe
+
+\section{Проблема}
+\include{problem-description}
+
+\section{EPAM Systems}
+\include{epam}
+
+\section{SaM Solutions}
+\include{sam-solutions}
+
+\section{Совместная работа}
+\include{collaborative-work}
 
 \end{document}
