--- a/epam/Presentation/10-bash_syntax.tex
+++ b/epam/Presentation/10-bash_syntax.tex
@@ -98,14 +98,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%   
 %%%%%%%%%% Content starts here %%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Функции}
+
+\mode<all>{\input{../../slides/bash/functions}}
 
 \section{Массивы}
 
 \mode<all>{\input{../../slides/bash/arrays}}
 
 
-\section{Строковые операторы}
+%\section{Строковые операторы}
 
-\mode<all>{\input{../../slides/bash/strings}}
+%\mode<all>{\input{../../slides/bash/strings}}
 
 \end{document}
