finalized Sams slides

--- a/conferences/lvee2013-winter/sam-solutions.tex
+++ b/conferences/lvee2013-winter/sam-solutions.tex
@@ -1,3 +1,9 @@
+\begin{frame}{SaM Solutions}
+  \begin{center}
+    \includegraphics{sam-solutions-elinux}
+  \end{center}
+\end{frame}
+
 \begin{frame}{SaM Solutions. Начало истории}
   \begin{block}{Август 2011}
     Принято решение о развитии направления Linux \& Embedded
@@ -76,14 +82,39 @@
     \item Примеры блоков: Shell, Управление процессами, Файловая система Unix, Обработка текста.
     \item Каждый блок - от 0.5 до 3 занятий.
     \item Блоки сразу создаются для повторного использования.  \newline
-  Могут быть прочитаны как отдельные разовые курсы повышения квалификации.
+      Могут быть прочитаны как отдельные разовые курсы повышения квалификации.
   \end{itemize}
 
 \end{frame}
 
 \begin{frame}{Ранняя публикация результатов}
 
-  \Huge
-  \alert{Release fast, release early}
+  \Large
+  \begin{center}
+    \alert{Release early, release offen} 
+
+    \includegraphics[height=5cm]{github}
+
+    \alert{Go github!}
+  \end{center}
   
+\end{frame}
+
+\begin{frame}{Результат}
+  \begin{center}
+    \large 
+    Формально:
+    \begin{itemize}
+      \item список рекомендованных к найму 
+      \item понедельник, 18 февраля - вручение дипломов  
+      \item плюс 10 человек в экосистеме линукс
+    \end{itemize} \pause
+
+    Неформально:
+    \begin{itemize}
+      \item мотивированные обученные люди 
+      \item невысокие ЗП на старте
+      \item высокая лояльность к компании
+    \end{itemize}
+  \end{center}
 \end{frame}
