--- a/conferences/lvee2013-winter/corporate_linux_education.tex
+++ b/conferences/lvee2013-winter/corporate_linux_education.tex
@@ -37,4 +37,12 @@
 \section{Совместная работа}
 \include{collaborative-work}
 
+\begin{frame}{Fin}
+
+  \Huge \alert{Вопросы?}
+
+  {v.shakhov@sam-solutions.net}
+
+\end{frame}
+
 \end{document}
