--- a/conferences/lvee2013-winter/sam-solutions.tex
+++ b/conferences/lvee2013-winter/sam-solutions.tex
@@ -108,6 +108,7 @@
       \item список рекомендованных к найму 
       \item понедельник, 18 февраля - вручение дипломов  
       \item плюс 10 человек в экосистеме линукс
+      \item 7 сотрудников прошли подготовку как вольнопосещающие
     \end{itemize} \pause
 
     Неформально:
