--- a/conferences/lvee2013-winter/corporate_linux_education.tex
+++ b/conferences/lvee2013-winter/corporate_linux_education.tex
@@ -37,11 +37,23 @@
 \section{Совместная работа}
 \include{collaborative-work}
 
-\begin{frame}{Fin}
+\begin{frame}[fragile]{Fin}
 
-  \Huge \alert{Вопросы?}
+  \Large \alert{Вопросы?}
 
-  {v.shakhov@sam-solutions.net}
+  \href{http://mlug.linux.by}{http://mlug.linux.by}
+
+  \hrulefill
+
+  \href{mailto:v.shakhov@sam-solutions.net}{v.shakhov@sam-solutions.net}
+
+  \href{https://github.com/SaM-Solutions/linux\_courses}{https://github.com/SaM-Solutions/linux\_courses}
+
+  \hrulefill
+
+  \href{mailto:denis\_pynkin@epam.com}{denis\_pynkin@epam.com}
+
+  \href{https://github.com/d4s/linux\_courses}{https://github.com/d4s/linux\_courses}
 
 \end{frame}
 
