--- a/conferences/lvee2013-winter/epam.tex
+++ b/conferences/lvee2013-winter/epam.tex
@@ -1,3 +1,9 @@
+\begin{frame}{EPAM}
+  \begin{center}
+    \includegraphics[height=3.3cm]{epam}
+  \end{center}
+\end{frame}
+
 \begin{frame}{}
 	\Huge
 	\center{Developers!\\Developers!\\Developers!\\}
@@ -19,13 +25,13 @@
 	\begin{block}{Целевая аудитория}
 		\begin{itemize}
 			\item Студенты технических специальностей
-			\item Любые программисты, желающие освоить работу в ОС Linux
+			\item Программисты, желающие освоить работу в ОС Linux
 		\end{itemize}
 	\end{block}
 
 	\begin{block}{Требования к кандидатам}
 		\begin{itemize}
-			\item Уже уметь программировать, под любую другую платформу.
+			\item Уметь программировать, под любую платформу.
 		\end{itemize}
 	\end{block}
 \end{frame}
@@ -63,7 +69,7 @@
 
 	\begin{block}{Принципы}
 		\begin{itemize}
-			\item Лекторы? Учителя? {\bf NO WAY!!!} 
+			\item Лекторы? Учителя? {\bf NO WAY!!!} \newline 
 				Разработчики для разработчиков! 
 			\item Небольшая группа изучающих
 			\item Балланс между теорией и практикой
@@ -80,7 +86,7 @@
 			\item Все планы нарушены ;-)
 			\item 2 увлеченных человека
 			\item Практически закончены 2 первых модуля
-			\item Материалы выкладываются в общий доступ ``по-готовности''
+			\item Материалы в общий доступ 'по-готовности'
 				\begin{itemize}
 					\item Патчи от студентов уже есть
 				\end{itemize}
