--- a/conferences/lvee2013-winter/problem-description.tex
+++ b/conferences/lvee2013-winter/problem-description.tex
@@ -3,9 +3,14 @@
 
 	\begin{block}{Заработать денег владельцам}
 
-	Для решения этой задачи в сфере встраиваемых и серверных решений под управлением Linux 
-	необходимы специалисты знающие эту операщионную систему.
-	\end{block}
+	В сфере встраиваемых и серверных решений под управлением ОС Linux:
+	\begin{itemize}
+	  \item Сегмент Linux стремительно растёт
+	  \item Проекты есть, людей нет
+	  \item Люди не знают инструментальную среду Linux
+	\end{itemize} 
+
+      \end{block}
 \end{frame}
 
 
@@ -23,16 +28,19 @@
 				заслугой исключительно отдельных лиц, работающих в ВУЗе
 		\end{itemize}
 	\end{block}
+\end{frame}
+  
 
-	\pause
+\begin{frame}{Почему нас так мало?}
+  \begin{block}{Сообщество. Открытое ли?}
+    \begin{itemize}
+      \item Кастовость
+      \item Снобизм и псевдо 'элитарность'
+      \item Сложность первоначального вхождения
+    \end{itemize} 
+  \end{block} \pause
 
-	\begin{block}{Сообщество. Открытое ли?}
-		\begin{itemize}
-			\item Кастовость
-			\item Снобизм и псевдо ''элитарность``
-			\item Сложность первоначального вхождения
-		\end{itemize}
-	\end{block}
+  \alert{Т.е. те же болячки, что и у белорусского IT в целом}
 \end{frame}
 
 
@@ -41,13 +49,13 @@
 
 	\begin{block}{}
 		\begin{itemize}
-			\item Система образования в РБ? 
+			\item Система образования в РБ? \\
 				LOL
 				\pause
-			\item Существующие специалисты?
+			\item Существующие специалисты? \\
 				Циркуляция одних и тех же лиц.
 				\pause
-			\item Естественный приток энтузиастов?
+			\item Естественный приток энтузиастов? \\
 				Слишком медленно.
 		\end{itemize}
 	\end{block}
