--- a/conferences/lvee2013-winter/sam-solutions.tex
+++ b/conferences/lvee2013-winter/sam-solutions.tex
@@ -38,31 +38,36 @@
     \item Сегмент Linux стремительно растёт
     \item Специалистов никто не готовит 
     \item Специалисты уезжают
-  \end{itemize} \pause
+  \end{itemize} 
     
 \end{frame}
 
 \begin{frame}[fragile]{Доступно о кадрах}
  
   \begin{center}
-    \Large \alert{Количество и качество \newline специалистов к объёму работы \newline стремительно падает} 
+    \Large Количество и качество \newline специалистов к объёму работы \newline стремительно падает 
+
+    \includegraphics[height=5cm]{popa}
   \end{center}
-  \begin{tabular}{l r}
-    \includegraphics[height=5cm]{popa} &
-    \includegraphics[height=5cm]{penguin} \\
-  \end{tabular}
 
 \end{frame}
 
 \begin{frame}{SaM Solutions. Стажировка Linux QA}
   \alert{Решение - чучхэ, опора на свои силы}
+  
+  \center\includegraphics[height=0.5\textheight]{chuchkhe}
 
   \begin{itemize}
     \item Свои преподаватели
     \item Программа, адаптированная к своим проектам
     \item Свой учебный класс
     \item Отбор из хорошо мотивированных соискателей\footnote{любого возраста и рода занятий}
-  \end{itemize} \pause
+  \end{itemize} 
+
+
+\end{frame}
+
+\begin{frame}{Набор}
 
 
   \alert{Набор}
@@ -87,23 +92,11 @@
 
 \end{frame}
 
-\begin{frame}{Ранняя публикация результатов}
-
-  \Large
-  \begin{center}
-    \alert{Release early, release offen} 
-
-    \includegraphics[height=5cm]{github}
-
-    \alert{Go github!}
-  \end{center}
-  
-\end{frame}
 
 \begin{frame}{Результат}
   \begin{center}
     \large 
-    Формально:
+    \alert{Формально}:
     \begin{itemize}
       \item список рекомендованных к найму 
       \item понедельник, 18 февраля - вручение дипломов  
@@ -111,7 +104,7 @@
       \item 7 сотрудников прошли подготовку как вольнопосещающие
     \end{itemize} \pause
 
-    Неформально:
+    \alert{Неформально}:
     \begin{itemize}
       \item мотивированные обученные люди 
       \item высокая лояльность к компании
