Added ballmer's image

--- a/conferences/lvee2013-winter/epam.tex
+++ b/conferences/lvee2013-winter/epam.tex
@@ -5,8 +5,13 @@
 \end{frame}
 
 \begin{frame}{}
-	\Huge
-	\center{Developers!\\Developers!\\Developers!\\}
+	\begin{columns}
+		\column{0.7\textwidth}
+		\Huge
+		\center{Developers!\\Developers!\\Developers!\\}
+		\column{0.3\textwidth}
+		\center\includegraphics[height=4cm]{steve_ballmer}
+	\end{columns}
 \end{frame}
 
 
