--- a/conferences/lvee2013-winter/epam.tex
+++ b/conferences/lvee2013-winter/epam.tex
@@ -16,7 +16,7 @@
 
 
 \begin{frame}
-	\frametitle{Developers! Developers! Developers!}
+	\frametitle{Курсы Linux от Epam}
 
 	\begin{block}{Цели}
 		\begin{itemize}
