--- a/conferences/lvee2013-winter/problem-description.tex
+++ b/conferences/lvee2013-winter/problem-description.tex
@@ -47,7 +47,7 @@
 \begin{frame}
 	\frametitle{Где взять Linux-специалистов?}
 
-	\begin{block}{}
+	\begin{block}{Источники}
 		\begin{itemize}
 			\item Система образования в РБ? \\
 				LOL
