[SS] proper korean transcription

--- a/conferences/lvee2013-winter/sam-solutions.tex
+++ b/conferences/lvee2013-winter/sam-solutions.tex
@@ -53,7 +53,7 @@
 \end{frame}
 
 \begin{frame}{SaM Solutions. Стажировка Linux QA}
-  \alert{Решение - чучхэ, опора на свои силы}
+  \center\alert{Решение - чучхе, опора на свои силы}
   
   \center\includegraphics[height=0.5\textheight]{chuchkhe}
 
