--- a/slides/bash/strings.tex
+++ b/slides/bash/strings.tex
@@ -5,9 +5,6 @@
 	\frametitle{Переменные -- суть строки}
 
 	\begin{center}
-	\large{Вернемся к переменным}
-
-	\normalsize
 	В shell существует много способов преобразования строк и значений переменной.
 	\end{center}
 
@@ -85,7 +82,7 @@ echo ${entry##*:} # /bin/bash
 	\end{lstlisting}
 	\end{block}
 	\pause
-	\begin{block}{\$\{string\#\#substring\}}
+	\begin{block}{\$\{string\%\%substring\}}
 	\begin{lstlisting}
 entry=$(cat /etc/passwd | grep "^$USER:")
 echo $entry # d4s:x:500:500:d4s:/home/d4s:/bin/bash
@@ -123,7 +120,7 @@ echo ${entry//$USER} # :x:500:500::/home/:/bin/bash
 	\frametitle{Замена части строки}
 
 	\begin{block}{\$\{string/\#substring/replacement\}}
-		Замена, если строка начинается с искомого выражения
+		Замена, если строка начинается с искомого выражения (префикс).
 
 	\begin{lstlisting}
 entry=$(cat /etc/passwd | grep "^$USER:")
@@ -134,7 +131,7 @@ echo ${entry/#$USER/user} # user:x:500:500:d4s:/home/d4s:/bin/bash
 
 	\pause
 	\begin{block}{\$\{string/\%substring/replacement\}}
-		Замена, если строка завершается искомым выражением
+		Замена, если строка завершается искомым выражением (суффикс).
 
 	\begin{lstlisting}
 entry=$(cat /etc/passwd | grep "^$USER:")
@@ -143,5 +140,24 @@ echo ${entry/%\/bin\/bash/\/bin\/sh} # user:x:500:500:user:/home/user:/bin/sh
 	\end{lstlisting}
 	\end{block}
 
+\end{frame}
+
+\begin{frame}[fragile]
+	\frametitle{Получение имен переменных}
+
+	\begin{block}{ \$\{!varprefix*\} и \$\{!varprefix@\} }
+
+		Скрипт, который выводит на экран список переменных, начинающихся на {\tt BASH} и их значений:
+	\begin{lstlisting}
+#!/bin/bash
+
+VARS=${!BASH*}
+for VAR in $VARS
+do
+    eval VALUE=\$$VAR
+    echo $VAR=$VALUE
+done
+	\end{lstlisting}
+	\end{block}
 \end{frame}
 
