--- a/slides/toolchain/ld.tex
+++ b/slides/toolchain/ld.tex
@@ -95,3 +95,21 @@ gcc -g -o file3 file3.o -lmylib
     \item Создать программу вызывающую функцию {\tt hello()} и слинковать ее с динамической библиотекой
   \end{itemize}
 \end{frame}
+
+\begin{frame}
+	\frametitle{Пример: последовательность линковки библиотек}
+
+	\begin{enumerate}
+		\item Создать 2 библиотеки ({\tt liba.c} и {\tt libb.c})
+			с одинаковой функцией {\tt void test(void)}, но разным функционалом\\
+			(например вывести разные строки на экран)
+		\item Создать программу ({\tt main.c}), которая будет использовать 
+			библиотечную функцию {\tt test()}
+		\item Линковать с библиотеками в различной последовательности и 
+			посмотреть результат выполнения команды
+			\begin{itemize}
+				\item {\tt -lb -la -L.}
+				\item {\tt -la -lb -L.}
+			\end{itemize}
+	\end{enumerate}
+\end{frame}
