--- a/slides/toolchain/tikzinclude.tex
+++ b/slides/toolchain/tikzinclude.tex
@@ -22,4 +22,5 @@
 
 \newcommand{\filename}[1]{{\color{blue}{\textit{\begingroup \urlstyle{sf}\Url{#1}}}}}
 \newcommand{\filenamew}[1]{{{\textit{\begingroup \urlstyle{sf}\Url{#1}}}}}
+\newcommand{\command}[1]{\texttt{#1}}
 
